# Bayesian_Matting

./: CMakeLists.txt  Cluster.cpp  bayesian.cpp  bayesian.h  main.cpp  readme.txt
